Refactor and enhance multi-tenant, notification, and UI handling
Remove `PawnActivity.jsx` from the frontend as part of cleanup. Refactor/backend: add tenant awareness to various services like `PurchaseOrderService` and `NotificationService`, ensuring feature-gated behavior and multi-tenant compatibility. Frontend: refine agent management UI with a tabbed layout and reusable form for cleaner UX; introduce `WidgetConfigGrid.jsx` to modularize dashboard widget management.